# ChangeLog for sci-chemistry/rasmol
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.21 2011/01/25 12:44:51 fauli Exp $

  25 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  rasmol-2.7.5-r1.ebuild:
  stable x86, bug 351984

  23 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  rasmol-2.7.5-r1.ebuild:
  Mark ~ppc wrt #303393

  19 Jan 2011; Justin Lecher <jlec@gentoo.org> +rasmol-2.7.2.1.1-r1.ebuild:
  Reverted removal of rasmol-2.7.2.1.1-r1.ebuild

  18 Jan 2011; Markos Chandras <hwoarang@gentoo.org> rasmol-2.7.5-r1.ebuild:
  Stable on amd64 wrt bug #351984

  18 Jan 2011; Justin Lecher <jlec@gentoo.org> -rasmol-2.7.2.1.1-r1.ebuild:
  Removed old

*rasmol-2.7.5-r1 (31 Mar 2010)

  31 Mar 2010; Justin Lecher <jlec@gentoo.org>
  files/2.7.5-bundled-lib.patch, -rasmol-2.7.5.ebuild,
  +rasmol-2.7.5-r1.ebuild:
  Removed unneeded patch for ldflags, removed unneeded linking against
  libforms, #312369


  07 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  files/2.7.5-bundled-lib.patch, rasmol-2.7.5.ebuild:
  Prefix cleaning, keyworded for *-linux, tested by me

*rasmol-2.7.5 (03 Feb 2010)

  03 Feb 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +files/2.7.5-bundled-lib.patch, rasmol-2.7.2.1.1-r1.ebuild,
  +rasmol-2.7.5.ebuild, +files/ldflags.patch:
  Version Bump
  Only providing 32bit colordepth gtk interface now

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  rasmol-2.7.2.1.1-r1.ebuild:
  Drop virtual/x11 references.

  07 Jan 2007; Danny van Dyk <kugelfang@gentoo.org>
  -rasmol-2.7.2.1.1.ebuild:
  QA: Removed unused versions.

  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  (#148281) Change herd to sci-chemistry from sci.

  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  rasmol-2.7.2.1.1-r1.ebuild:
  x86/ppc stable.

  24 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  rasmol-2.7.2.1.1-r1.ebuild:
  Keyword ~ppc.
