@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/rasmol/Attic/rasmol-2.7.5-r1.ebuild,v 1.4 2011/01/25 12:44:51 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/rasmol/Attic/rasmol-2.7.5-r1.ebuild,v 1.5 2011/03/07 10:40:39 jlec Exp $
 
 EAPI="3"
 
@@ -23,7 +23,7 @@ RDEPEND="
 	x11-libs/gtk+:2
 	x11-libs/libXext
 	x11-libs/libXi
-	x11-libs/vte
+	x11-libs/vte:0
 	dev-libs/cvector
 	sci-libs/cbflib
 	sci-libs/cqrlib
