@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/genius
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/genius/ChangeLog,v 1.4 2011/03/02 20:11:42 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/genius/ChangeLog,v 1.5 2011/03/07 10:41:50 jlec Exp $
+
+  07 Mar 2011; Justin Lecher <jlec@gentoo.org> genius-1.0.9.ebuild,
+  genius-1.0.11.ebuild:
+  Correct Slots for gtk 3 introduction to tree
 
   02 Mar 2011; Justin Lecher <jlec@gentoo.org> genius-1.0.9.ebuild,
   genius-1.0.11.ebuild:
