@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/scilab
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/scilab/Attic/ChangeLog,v 1.54 2011/03/02 21:32:39 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/scilab/Attic/ChangeLog,v 1.55 2011/03/07 10:42:36 jlec Exp $
+
+  07 Mar 2011; Justin Lecher <jlec@gentoo.org> scilab-4.1.2-r1.ebuild,
+  scilab-4.1.2-r2.ebuild:
+  Correct Slots for gtk 3 introduction to tree
 
   02 Mar 2011; Justin Lecher <jlec@gentoo.org> scilab-4.1.2-r1.ebuild,
   scilab-4.1.2-r2.ebuild:
