@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/rasmol
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.21 2011/01/25 12:44:51 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.22 2011/03/07 10:40:39 jlec Exp $
+
+  07 Mar 2011; Justin Lecher <jlec@gentoo.org> rasmol-2.7.5-r1.ebuild:
+  Correct Slots for gtk 3 introduction to tree
 
   25 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
   rasmol-2.7.5-r1.ebuild:
